@@ -1,8 +1,10 @@
 debathena-libathdir (10.0.2-0debathena1) unstable; urgency=low
 
   * Fix handling of LDFLAGS.
+  * Add a check to the rules file to make sure configure.ac's version
+    stays in sync with the changelog.
 
- -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 20:01:59 -0400
+ -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 22:48:24 -0400
 
 debathena-libathdir (10.0.1-0debathena1) unstable; urgency=low
 
